examples/test/testpolicy8369.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8369
  namespace: namespace89
spec:
  podSelector:
    matchLabels:
      key16: value27
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key0: value32
          key11: value22
          key13: value12
      podSelector:
        matchLabels:
          key16: value13
          key42: value29
